apps/radicale/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radicale
spec:
  podSelector:
    matchLabels:
      app: radicale
  policyTypes:
    - Egress
    - Ingress
  ingress: []
  egress: []
